documentation and a bit of tidying up of the code

--- a/app/views/themes/custom/ricroberts/articles/home.erb
+++ b/app/views/themes/custom/ricroberts/articles/home.erb
@@ -32,10 +32,12 @@
 	<div id="content">
 	  
 		<div class="grid_8 main">
-			<% @articles.each do |article|%>
-        <%= render :partial => 'post_preview', :locals => {:article => article}%>
-			<% end %>
-			<%= pagination_links() %>
+		  <%if @articles%>
+			  <% @articles.each do |article|%>
+          <%= render :partial => 'post_preview', :locals => {:article => article}%>
+			  <% end %>
+			  <%= pagination_links() %>
+			<%end%>
 		</div> 
 		<%= render :partial => 'sidebar' %>
   </div>
