added link to github repo in sidebar and footer, for ricroberts theme

--- a/app/views/themes/custom/ricroberts/articles/_sidebar.erb
+++ b/app/views/themes/custom/ricroberts/articles/_sidebar.erb
@@ -47,11 +47,13 @@
 		<h3>Projects</h3>
 		<h4>Swirrl</h4>
 		<a href="http://www.swirrl.com">Swirrl</a> is a web-native, online application for collaboration and managing information: a home for your data.
+		<h4>SemanticJournal</h4>
+		The open-source, SemanticWeb-enabled, CouchDB+Rails blog engine which powers this blog. <a href="http://github.com/Swirrl/SemanticJournal">Code and docs are on Github</a>.
 		<h4>grrid.js</h4>
 		Originally written for use in Swirrl, <a href="http://www.grridjs.org">grrid.js</a> is an open source, pure
-		javascript spreadsheet style grid, built on Prototype.js. Download the source from <a href="http://github.com/Swirrl/grrid/tree/master">github</a>.
+		javascript spreadsheet style grid, built on Prototype.js. Download the source from <a href="http://github.com/Swirrl/grrid/tree/master">GitHub</a>.
 		<h4>Taskit</h4>
-		<a href="http://github.com/Swirrl/taskit/tree/master">Taskit</a></span> is a plugin to allow you to schedule simple tasks for your rails app.  Download the source from <a href="http://github.com/Swirrl/taskit/tree/master">github</a>.
+		<a href="http://github.com/Swirrl/taskit/tree/master">Taskit</a></span> is a plugin to allow you to schedule simple tasks for your rails app.  Download the source from <a href="http://github.com/Swirrl/taskit/tree/master">GitHub</a>.
 	</div>
 	
 	<div id="other_blogs" class="sidebar_entry">
