--- a/app/views/themes/custom/ricroberts/articles/_copyright.erb
+++ b/app/views/themes/custom/ricroberts/articles/_copyright.erb
@@ -1,3 +1,3 @@
 <div id="copyright">
-	This blog by <%= link_to "Ric Roberts", "http://#{@blog.canonical_url}"%> is licensed under a <a href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Licence</a>. Powered by <a href="http://www.swirrl.com">Swirrl</a>'s <em>SemanticJournal</em> blog engine.
+	This blog by <%= link_to "Ric Roberts", "http://#{@blog.canonical_url}"%> is licensed under a <a href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Licence</a>. Powered by <a href="http://www.swirrl.com">Swirrl</a>'s <a href="http://github.com/Swirrl/SemanticJournal">SemanticJournal</a> blog engine.
 </div>
