blanked out google analytics account number, to avoid messing up my stats

--- a/app/views/themes/custom/ricroberts/articles/home.erb
+++ b/app/views/themes/custom/ricroberts/articles/home.erb
@@ -52,7 +52,7 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 </script>
 <script type="text/javascript">
 try{
-var pageTracker = _gat._getTracker("UA-3566016-3");
+var pageTracker = _gat._getTracker("UA-XXXXXXX-X");
 pageTracker._trackPageview();
 } catch(err) {}</script>
 
