--- a/app/views/layouts/articles.erb
+++ b/app/views/layouts/articles.erb
@@ -1,8 +1,19 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN"
-"http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
+<% if @blog.html5? %>
+	<!DOCTYPE html>
+	<html lang="en" xml:lang="en">
+   <head>
+     <meta charset="utf-8" />
+		 <link rel="profile"
+  	  	href="http://www.w3.org/1999/xhtml/vocab" />
+<% else %>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-	<head>
+	<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN"
+	"http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
+
+	<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+		<head>
+		  <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+<% end %>
 		<%= yield :template_head %>
 	</head>
 	<body>
