some tweaks to my blog theme

--- a/app/views/themes/custom/ricroberts/articles/_sidebar.erb
+++ b/app/views/themes/custom/ricroberts/articles/_sidebar.erb
@@ -3,9 +3,11 @@
 	<div id="site_search" class="sidebar_entry">
 		<h3>Search this site</h3>
 		<form action="http://www.google.com/search" method="get">
+			<div>
         <input name="sitesearch" type="hidden" value="ricroberts.com" />
         <input class="text" name="q" type="text" size="24" />
-        <input class="button" type="submit" value="Google" />
+        <input class="button" type="submit" value="Google" /> 
+      </div>
     </form>
 	</div>
 	
@@ -15,7 +17,7 @@
 		<img alt="me" src="http://ricroberts.s3.amazonaws.com/sepia_me_small.png"/>
 		
 		I co-founded, built, and run
-		<a href="http://www.swirrl.com">Swirrl</a>, an online service for collaboration and managing data. I also work at digital agency,
+		<a href="http://www.swirrl.com">Swirrl</a>, a hosted wiki service. I also work at digital agency,
 		<a href="http://www.stardotstar.com">Stardotstar</a>
 		as a web developer on projects for public and private sectors.
 		<br/>
@@ -34,7 +36,7 @@
 	<div id="about_swirrl" class="sidebar_entry">
 		<h3>My Company</h3>
 		<a href="http://www.swirrl.com"><img src="http://ricroberts.s3.amazonaws.com/swirrl_small_transp.png" alt="Swirrl" /></a><br/>
-		As well as our data-sharing web application, Swirrl now offers <a href="http://www.swirrl.com/services">consultancy</a> on applying semantic web technologies.
+		As well as our <a href="http://www.swirrl.com/">hosted wiki</a> application, Swirrl now offers <a href="http://www.swirrl.com/services">consultancy</a> on applying semantic web technologies.
 	</div>
 
 	<div id="contact" class="sidebar_entry">
@@ -46,28 +48,28 @@
 	<div id="projects" class="sidebar_entry">
 		<h3>Projects</h3>
 		<h4>Swirrl</h4>
-		<a href="http://www.swirrl.com">Swirrl</a> is a web-native, online application for collaboration and managing information: a home for your data.
+		<a href="http://www.swirrl.com">Swirrl</a> is an easy to use, yet powerful, hosted wiki service.  It has all the features you'd expect from a wiki, plus powerful database-like features to help you organise your information.
 		<h4>SemanticJournal</h4>
-		The open-source, SemanticWeb-enabled, CouchDB+Rails blog engine which powers this blog. <a href="http://github.com/Swirrl/SemanticJournal">Code and docs are on Github</a>.
+		The open-source, SemanticWeb-enabled, CouchDB+Rails blog engine which powers this site. <a href="http://github.com/Swirrl/SemanticJournal">Code and docs are on Github</a>.
 		<h4>grrid.js</h4>
 		Originally written for use in Swirrl, <a href="http://www.grridjs.org">grrid.js</a> is an open source, pure
 		javascript spreadsheet style grid, built on Prototype.js. Download the source from <a href="http://github.com/Swirrl/grrid/tree/master">GitHub</a>.
 		<h4>Taskit</h4>
-		<a href="http://github.com/Swirrl/taskit/tree/master">Taskit</a></span> is a plugin to allow you to schedule simple tasks for your rails app.  Download the source from <a href="http://github.com/Swirrl/taskit/tree/master">GitHub</a>.
+		<a href="http://github.com/Swirrl/taskit/tree/master">Taskit</a> is a plugin to allow you to schedule simple tasks for your rails app.  Download the source from <a href="http://github.com/Swirrl/taskit/tree/master">GitHub</a>.
 	</div>
 	
 	<div id="other_blogs" class="sidebar_entry">
 		<h3>Other Blogs</h3>
-		<a href="http://dailyjs.com"><img alt="DailyJS" src="http://ricroberts.s3.amazonaws.com/djs.gif"></a>
-		<a href="http://dailyJS.com">DailyJS</a> is a technically-oriented blog about javascript edited by <a href="http://alexyoung.org">Alex Young</a>, <a href="http://gusg.us">Justin Knowlden</a> and me.
-		<br><br>
-		<a href="http://blog.swirrl.com"><img alt="SwirrlSpeak" src="http://ricroberts.s3.amazonaws.com/swirrl_logo_only40.jpg"></a>
+		<a href="http://dailyjs.com"><img alt="DailyJS" src="http://ricroberts.s3.amazonaws.com/djs.gif" /></a>
+		<a href="http://dailyJS.com">DailyJS</a> is a technically-oriented blog about javascript edited by <a href="http://alexyoung.org">Alex Young</a> and me.
+		<br/><br/>
+		<a href="http://blog.swirrl.com"><img alt="SwirrlSpeak" src="http://ricroberts.s3.amazonaws.com/swirrl_logo_only40.jpg" /></a>
 		<a href="http://blog.swirrl.com">SwirrlSpeak</a> is Swirrl's blog. We post articles about business, the web, collaboration, Swirrl, and anything else we think you'll find interesting.
-		<br><br>
-		<a href="http://www.webofdatablog.com"><img alt="web of data blog" src="http://ricroberts.s3.amazonaws.com/semantic.jpg"></a> Please check out the <a href="http://www.webofdatablog.com/">Web of Data Blog</a>. Bill, my Swirrl co-founder, writes about about how and why you should publish data on the web, in a way that lets machines read it as well as people.
-		<br><br>
-		<a href="http://www.rubyinside.com"><img alt="RubyInside" src="http://ricroberts.s3.amazonaws.com/rubyinside.jpg"></a>
-		I blog regularly over at <a href="http://www.rubyinside.com">Ruby Inside</a> with Ruby news, code links and tips.
+		<br/><br/>
+		<a href="http://www.webofdatablog.com"><img alt="web of data blog" src="http://ricroberts.s3.amazonaws.com/semantic.jpg" /></a> Please check out the <a href="http://www.webofdatablog.com/">Web of Data Blog</a>. Bill, my Swirrl co-founder, writes about about how and why you should publish data on the web, in a way that lets machines read it as well as people.
+		<br/><br/>
+		<a href="http://www.rubyinside.com"><img alt="RubyInside" src="http://ricroberts.s3.amazonaws.com/rubyinside.jpg" /></a>
+		I sometimes blog over at <a href="http://www.rubyinside.com">Ruby Inside</a> with Ruby news, code links and tips.
 	</div>
 
 </div>
