--- a/app/views/themes/custom/ricroberts/articles/_copyright.erb
+++ b/app/views/themes/custom/ricroberts/articles/_copyright.erb
@@ -1,3 +1,3 @@
-<div id="copyright">
-	This blog by <%= link_to "Ric Roberts", "http://#{@blog.canonical_url}"%> is licensed under a <a href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Licence</a>. Powered by <a href="http://www.swirrl.com">Swirrl</a>'s <a href="http://github.com/Swirrl/SemanticJournal">SemanticJournal</a> blog engine.
+<div id="copyright" xmlns:cc="http://creativecommons.org/ns#">
+  This blog by <a href="<%="http://#{@blog.canonical_url}"%>" property="cc:attributionName" rel="cc:attributionURL">Ric Roberts</a> is licensed under a <a href="http://creativecommons.org/licenses/by/3.0/" rel="cc:license">Creative Commons Attribution 3.0 Licence</a>. Powered by <a href="http://www.swirrl.com">Swirrl</a>'s <em><a href="http://github.com/Swirrl/SemanticJournal">SemanticJournal</a></em> blog engine.
 </div>
