--- a/app/views/themes/custom/ricroberts/articles/show.erb
+++ b/app/views/themes/custom/ricroberts/articles/show.erb
@@ -1,24 +1,8 @@
 <% content_for :template_head do %>
 
-	<title>Ric Roberts - <%= h(@article.title) %></title>
+  <title>Ric Roberts - <%= h(@article.title) %></title>
 
-	<link rel="stylesheet" type="text/css" href="http://ricroberts.s3.amazonaws.com/reset.css " />
-	<link rel="stylesheet" type="text/css" href="http://ricroberts.s3.amazonaws.com/text.css" />
-	<link rel="stylesheet" type="text/css" href="http://ricroberts.s3.amazonaws.com/960.css" />
-	<link rel="stylesheet" type="text/css" href="http://ricroberts.s3.amazonaws.com/ricroberts.css" />
-	
-	<!--[if IE 6]>
-		<link rel="stylesheet" type="text/css" href="http://ricroberts.s3.amazonaws.com/ricrobertsIE6.css" />
-	<![endif]-->
-	
-	
-	<link rel="alternate" type="application/rss+xml"
-	  title="RSS Feed for ricroberts.com" 
-	  href="http://feeds2.feedburner.com/richtext" />
-	
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-	
-	<%= render :partial => 'twitter_script'%>
+  <%= render :partial => "head" %>
 
 	<script type="text/javascript">
 	   <%= "var disqus_developer = 1;" if Rails.env.to_sym == :development %>
@@ -47,30 +31,7 @@
 
 </div>
 
-<script type="text/javascript">
-//<![CDATA[
-(function() {
-	var links = document.getElementsByTagName('a');
-	var query = '?';
-	for(var i = 0; i < links.length; i++) {
-	if(links[i].href.indexOf('#disqus_thread') >= 0) {
-		query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
-	}
-	}
-	document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/ricroberts/get_num_replies.js' + query + '"></' + 'script>');
-})();
-//]]>
-</script>
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try{
-var pageTracker = _gat._getTracker("UA-XXXXXXX-X");
-pageTracker._trackPageview();
-} catch(err) {}</script>
+<%= render :partial => "analytics" %>
 
 
 
